# mcp

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  mcp-bruno-collection.json  pyproject.toml
bruno-collection/: 1-Health-Check.bru  2-Initialize.bru  3-List-Tools.bru  4-List-Resources.bru  5-Call-Greet-Employee.bru  6-Read-Product-List.bru  bruno.json
bruno-collection/environments/: Local.bru
src/marketing_connect_mcp_services/: __init__.py  __main__.py  cli.py  config.py  logging_config.py  server.py
src/marketing_connect_mcp_services/models/: __init__.py
src/marketing_connect_mcp_services/prompts/: __init__.py  example.py
src/marketing_connect_mcp_services/resources/: __init__.py  example.py
src/marketing_connect_mcp_services/tools/: __init__.py  example.py
tests/: __init__.py  conftest.py  test_config.py  test_health.py  test_tools.py
